--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@commitlint/cli": "^17.0.2",
     "@commitlint/config-conventional": "^17.0.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
+    "mongoose": "^6.3.5",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
