--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "NODE_ENV=development nodemon ./bin/www"
   },
   "dependencies": {
     "@commitlint/cli": "^17.0.2",
@@ -22,6 +23,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
+    "nodemon": "^2.0.16",
     "prettier": "2.6.2"
   },
   "main": "app.js",
