fix: update user function naming and create recipe function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "es2021": true,
     "node": true
   },
+  "allowImplicit": true,
   "ignorePatterns": ["node_modules/"],
   "rules": {
     "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
