--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.16.1",
     "firebase-admin": "^10.3.0",
     "http-errors": "~1.6.3",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.5",
     "morgan": "~1.9.1"
   },
